Fix SKIPPED retry, hide Connect Gmail on CF, rewrite README
- EmailJobService: allow SKIPPED (not just FAILED) jobs to be retried/sent-now
- GmailSessionStatusDto: add cloudEnvironment boolean field
- SettingsController: populate cloudEnvironment from isCloudFoundry() in buildStatus()
- GmailSessionStatus (frontend): add cloudEnvironment field to interface
- Settings component: hide Connect Gmail / Re-connect Gmail buttons when
  cloudEnvironment=true; show a blue info banner instead; keep Upload Session
  File and Disconnect visible in all environments
- README: rewrite as concise, icon-rich reference (halved length, added emoji
  section headers, streamlined tables, removed verbose prose)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>